@@ -1,4 +1,7 @@
 Changelog for driftnet
+
+Added a PID file for adjunct mode.
+
 $Id: CHANGES,v 1.19 2004/04/26 14:42:36 chris Exp $
 
 Driftnet now uses GTK2, rather than GTK1.
